doc updated